tests/errors/syn_if10.java
public class syn_if10 {
public static void main(String[] args){
if true ) {
 
}
}
}